.opsera-all-is-well/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: all-is-well
  labels:
    app: all-is-well
    tenant: opsera
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: all-is-well
